// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DetailedMessagesDisplay > renders message counts 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────╮
│ Налагоджувальна консоль (натисніть F12 щоб закрити)                          │
│                                                                              │
│ ℹ  Repeated message (x5)                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`DetailedMessagesDisplay > renders messages correctly 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────╮
│ Налагоджувальна консоль (натисніть F12 щоб закрити)                          │
│                                                                              │
│ ℹ  Log message                                                               │
│ ⚠  Warning message                                                           │
│ ✖  Error message                                                             │
│ 🔍 Debug message                                                             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;
